--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
             <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
             <version>0.29.1</version>
         </dependency>
+        <dependency>
+            <groupId>technology.tabula</groupId>
+            <artifactId>tabula</artifactId>
+            <version>1.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
