--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,11 @@
             <artifactId>tabula</artifactId>
             <version>1.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>5.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
